@@ -1533,3 +1533,5 @@ Tarek Ziadé
 Gennadiy Zlobin
 Doug Zongker
 Peter Åstrand
+Laurent De Buyst
+Nicola Palumbo
